# dbt-snowflake-with-github-actions

./: LICENSE
dbt/: .gitignore  Makefile  dbt_project.yml  pyproject.toml
dbt/src/dbt/: __init__.py
terraform/lives/prod/: .terraform.lock.hcl  functional_role.tf  providers.tf
terraform/modules/role/: providers.tf
