[project]
name = "dbt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pei", email = "peeeei0804@gmail.com" }
]
dependencies = [
    "dbt-snowflake>=1.7.1",
]

requires-python = ">=3.11,<3.12"

[project.scripts]
hello = "dbt:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
